--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/soevielofficial/soevielofficial-bot#readme",
   "dependencies": {
+    "@discordjs/builders": "^1.4.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.5.0",
+    "@discordjs/voice": "^0.14.0",
     "canvas": "^2.10.2",
-    "discord.js": "^13.12.0",
-    "dotenv": "^16.0.3"
+    "discord-player": "^5.3.2",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "ffmpeg-static": "^5.1.0"
   }
 }
