--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "ffmpeg-static": "^5.1.0"
+    "ffmpeg-static": "^5.1.0",
+    "openai": "^3.1.0"
   }
 }
